search bar added, signup form linked and working

--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,13 @@ nav {
 }
 
 .form {
-  align-content: center;
   justify-content: space-around;
+  border: 1px;
+  border-style: dotted;
+  height: 200px;
+  width: 500px;
+  margin-left: 35%;
+  margin-top: 3rem
 }
 
 .customCard {
