--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   list-style: none;
-  color: rgb(81, 144, 165)
+  color: rgb(87, 81, 165);
 }
 
 .form {
@@ -40,4 +40,18 @@ nav {
 .upperCard {
   margin-bottom: 0.40rem;
   background: rgb(235, 235, 235) !important;
+  border: 7px
+}
+
+.carouselImage {
+  height: 700px;
+  width: 400px;
+}
+
+.cardImg {
+  height: 400px
+}
+
+.searchBar {
+  margin-top: 0.90rem;
 }
